Fixes breaks in site

--- a/style.css
+++ b/style.css
@@ -3335,11 +3335,7 @@ a.list-group-item.active .list-group-item-text {
   margin: 11.326px 0;
   border-bottom: 1px solid #eeeeee;
   margin: 0;
-<<<<<<< HEAD
-  color: #007ccf;
-=======
   color: #cf5300;
->>>>>>> 57ff1aaf8c4c7618002b47daa07c1ecce90137c1
   font-family: "Aleo-Bold", "Rockwell", "Times New Roman", Times, serif;
   margin: 0;
   padding: 11.326px 20px;
@@ -3366,6 +3362,7 @@ a.list-group-item.active .list-group-item-text {
 }
 #site-header * {
   height: 50px;
+  background: #007ccf;
 }
 #site-header h4,
 #site-header h5,
@@ -3373,11 +3370,7 @@ a.list-group-item.active .list-group-item-text {
   margin: 0;
 }
 .global-navigation {
-<<<<<<< HEAD
   background: #007ccf;
-=======
-  background: #cf5300;
->>>>>>> 57ff1aaf8c4c7618002b47daa07c1ecce90137c1
   color: #f9f9f9;
 }
 .global-navigation a {
